Backend: Add getEdges parameter